--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-router-flux": "^4.0.6",
+    "react-native-scrollable-tab-view": "^0.10.0",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
