--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
     "mobx-react": "^6.1.4",
     "react": "16.9.0",
     "react-native": "0.61.2",
+    "react-native-axios": "^0.17.1",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-reanimated": "^1.3.0",
     "react-native-router-flux": "^4.0.6",
-    "react-native-scrollable-tab-view": "^0.10.0",
     "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
     "@babel/runtime": "^7.6.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-preset-react-native": "^4.0.1",
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.0",
