--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.2",
     "mobx": "^5.14.2",
     "mobx-react": "^6.1.4",
     "react": "16.9.0",
